Js Code Is Finish and Prj are Completed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Apps</title>
+    <title>Weather App</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             <div class="date">Thursday - 2020 09 April</div>
         </section>
         <div class="current">
-            <div class="temp">10<span>°C</span></div>
+            <div class="temp">20<span>°C</span></div>
             <div class="weather">Sunny</div>
             <div class="hi-low">8°C / 16°C </div>
     </main>
